--- a/composer.json
+++ b/composer.json
@@ -25,51 +25,48 @@
   },
   "scripts": {
     "sca": [
-      "@disable-process-timeout",
       "vendor/bin/psalm --config=psalm.xml --diff --show-info=false --threads=2 --no-cache"
     ],
     "sca-baseline": [
-      "@disable-process-timeout",
       "vendor/bin/psalm --config=psalm.xml --set-baseline=psalm-baseline.xml --threads=4"
     ],
     "cs": [
-      "@disable-process-timeout",
       "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.dist.php --diff --verbose"
     ],
     "oncheckout": [
-      "@disable-process-timeout",
       "composer install",
       "composer dump-autoload",
       "echo '\\n\\n\\033[1;32mAfter-checkout preparations done!\\033[0m\\n'"
     ],
     "oncommit": [
-      "@disable-process-timeout",
-      "@composer validate --strict",
-      "@composer cs",
-      "@composer sca",
-      "@composer test",
-      "@composer type",
-      "@composer coverage",
+      "composer validate --strict",
+      "@cs",
+      "@sca",
+      "@test",
+      "@type",
+      "@coverage",
       "echo '\\n\\n\\033[1;32mPre-commit checks passed!\\033[0m\\n'"
     ],
     "test": [
-      "@disable-process-timeout",
       "./vendor/bin/pest"
     ],
     "type": [
-      "@disable-process-timeout",
       "./vendor/bin/pest --type-coverage --min=100"
     ],
     "coverage": [
-      "@disable-process-timeout",
-      "./vendor/bin/pest --coverage --min=95"
+      "./vendor/bin/pest --coverage --min=100"
     ],
     "mutate": [
-      "@disable-process-timeout",
       "./vendor/bin/pest --mutate --parallel --everything --covered-only --min=40"
+    ],
+    "qa": [
+      "@cs",
+      "@sca",
+      "@test"
     ]
   },
   "config": {
+    "process-timeout": 0,
     "sort-packages": true,
     "allow-plugins": {
       "pestphp/pest-plugin": true
