--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "php": ">=8.2",
-    "symfony/polyfill-php83": "^1.33"
+    "webmozart/assert": "^1.12"
   },
   "autoload": {
     "psr-4": {
@@ -26,21 +26,23 @@
   },
   "scripts": {
     "sca": [
-      "vendor/bin/psalm --config=psalm.xml --diff --show-info=false --threads=2 --no-cache"
+      "vendor/bin/psalm --no-cache --config=psalm.xml --diff --show-info=false --threads=2 --no-cache"
     ],
     "sca-baseline": [
-      "vendor/bin/psalm --config=psalm.xml --set-baseline=psalm-baseline.xml --threads=4"
+      "vendor/bin/psalm --no-cache --config=psalm.xml --set-baseline=psalm-baseline.xml --threads=4"
     ],
     "cs": [
       "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.dist.php --diff --verbose"
     ],
     "oncheckout": [
+      "chmod -R 777 ./",
       "composer install",
       "composer dump-autoload",
       "vendor/bin/psalm --clear-cache",
       "echo '\\n\\n\\033[1;32mAfter-checkout preparations done!\\033[0m\\n'"
     ],
     "oncommit": [
+      "chmod -R 777 ./",
       "composer validate --strict",
       "@cs",
       "@sca",
