Refactor integer types and namespaces; migrate to custom Assert and TypeException classes
- Renamed and reorganized namespaces for consistency, removing redundant prefixes.
- Replaced usage of `Webmozart\Assert` with a custom `Assert` class for tailored integer validations.
- Introduced and standardized the `TypeException` class across all integer types.
- Refactored `PositiveInt`, `NonNegativeInt`, and `WeekDayInt` to improve validation strictness and handling.
- Enhanced test cases with additional scenarios and updated exception expectations.
- Updated documentation (`README.md`, `INSTALL.md`, `USAGE.md`) to align with the new structure and behavior.
- Adjusted `composer.json` and `composer.lock` to reflect dependency changes.
- Improved autoloading and refined the `psalm.xml` configuration for better static analysis.

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,14 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=8.2",
-    "webmozart/assert": "^1.12"
+    "php": ">=8.2"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^v3.89",
+    "pestphp/pest": "^v3.8.4",
+    "pestphp/pest-plugin-type-coverage": "^v3.6",
+    "phpunit/phpunit": "^11.5",
+    "vimeo/psalm": "^6.13.1"
   },
   "autoload": {
     "psr-4": {
@@ -16,13 +22,6 @@
     "psr-4": {
       "PhpTypedValues\\Tests\\": "tests/"
     }
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^v3.89",
-    "pestphp/pest": "^v3.8.4",
-    "pestphp/pest-plugin-type-coverage": "^v3.6",
-    "phpunit/phpunit": "^11.5",
-    "vimeo/psalm": "^6.13.1"
   },
   "scripts": {
     "sca": [
