Expand PHP version support to include 7.4 with adjusted constraints and updates
- Updated `composer.json` to support PHP 7.4 alongside 8.2.
- Refactored Rector configuration for improved compatibility with PHP 7.4 downgrade.
- Introduced a `--dry-run` Rector script for safer code testing in `composer.json`.
- Updated `README.md` to reflect new PHP version compatibility.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=8.2"
+    "php": ">=7.4,<8.0 || >=8.2"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^v3.89",
@@ -52,8 +52,8 @@
       "@mutate",
       "echo '\\n\\n\\033[1;32mPre-commit checks passed!\\033[0m\\n'"
     ],
-    "rector": [
-      "./vendor/bin/rector process --config rector/toPhp7.4.php"
+    "rector-dry-run": [
+      "./vendor/bin/rector process --config rector/toPhp7.4.php --dry-run"
     ],
     "test": [
       "./vendor/bin/pest"
