--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.4,<8.0 || >=8.2"
+    "php": ">=8.2"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^v3.89",
