--- a/.github/workflows/downgrade-php74.yml
+++ b/.github/workflows/downgrade-php74.yml
@@ -30,7 +30,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          coverage: none
+          coverage: xdebug
           tools: composer:v2
 
       - name: Install dependencies
@@ -63,7 +63,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          coverage: none
+          coverage: xdebug
           tools: composer:v2
 
       - name: Install dependencies (ignore platform reqs to allow downgrade tools)
