Update library description and README for PHP version-specific usage instructions
- Revised description in `composer.json` to remove PHP 8.2 reference.
- Updated `README.md` with separate installation instructions for PHP 8.2 (`v2.*`) and PHP 7.4 (`v1.*`).

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "georgii-web/php-typed-values",
-  "description": "Typed value objects library for common php 8.2 data types.",
+  "description": "Typed value objects library for common php data types.",
   "type": "library",
   "license": "MIT",
   "require": {
