Add `tryFromString` method to string types with tests and usage updates
- Implemented `tryFromString` in `StringNonEmpty`, `StringStandard`, `StringUuidV4`, `StringUuidV7`, `Json`, and `StringVarChar255` to return `Undefined` for invalid input.
- Updated relevant interfaces and refactored exception handling for string parsing logic.
- Added comprehensive unit tests for valid and invalid cases.
- Modified `composer.json` scripts and `Usage` examples to include `tryFromString` methods.

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
     "test": [
       "./vendor/bin/pest"
     ],
+    "usage": [
+      "php ./src/Usage/AllTypes.php"
+    ],
     "type": [
       "./vendor/bin/pest --type-coverage --min=100 --do-not-cache-result"
     ],
