Add performance comparison script for integers and typed objects
- Introduced `Performance.php` to compare memory usage and execution time between arrays of scalars and typed objects.
- Updated `composer.json` with a new `performance` script for running benchmarks.
- Added performance disclaimer to `README.md` with guidance on use cases for typed objects vs. raw scalars.
- Fixed case-sensitive file includes in `Usage` scripts (`integer.php` -> `Integer.php`).

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
     "test": [
       "./vendor/bin/pest"
     ],
+    "performance": [
+      "php ./src/Usage/Performance.php 1000 && php ./src/Usage/Performance.php 10000 && php ./src/Usage/Performance.php 100000 && php ./src/Usage/Performance.php 1000000"
+    ],
     "usage": [
       "php ./src/Usage/AllTypes.php"
     ],
