--- a/.github/workflows/downgrade-php74.yml
+++ b/.github/workflows/downgrade-php74.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Run test coverage
         run: composer run-script coverage
 
+      - name: Run mutation tests
+        run: composer run-script mutate
+
   downgrade-and-tag:
     name: Downgrade to PHP 7.4 and Tag v1.x
     needs: verify-php82
