--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -52,3 +52,6 @@ jobs:
 
     - name: Run test coverage
       run: composer run-script coverage
+
+    - name: Run mutation tests
+      run: composer run-script mutate
