--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
       "composer validate --strict",
       "@cs",
       "@sca",
+      "@usage",
       "@test",
       "@type",
       "@coverage",
