--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,6 +44,9 @@ jobs:
     - name: Run psalm
       run: composer run-script sca
 
+    - name: Run usage checks
+      run: composer run-script usage
+
     - name: Run tests
       run: composer run-script test
 
