Force push tags in GitHub Actions to update existing remote tags

--- a/.github/workflows/downgrade-php74.yml
+++ b/.github/workflows/downgrade-php74.yml
@@ -123,4 +123,5 @@ jobs:
             git tag -d "$NEW_TAG"
           fi
           git tag "$NEW_TAG"
-          git push origin "$NEW_TAG"
+          # Force push the tag to update it if it already exists on remote
+          git push --force origin "$NEW_TAG"
