--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
       "PhpTypedValues\\Tests\\": "tests/"
     }
   },
+  "suggest": {
+    "ext-bcmath": "Optionally required for Decimal type."
+  },
   "scripts": {
     "sca": [
       "vendor/bin/psalm --no-cache --config=psalm.xml --diff --show-info=false --threads=4 --no-cache"
