--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3'
-
 services:
-  app:
+  php:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    container_name: php-typed-values-app
+    container_name: php-typed-values
     restart: unless-stopped
     working_dir: /var/www
     volumes:
