--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,7 @@ FROM php:8.4-cli
 RUN apt-get update && apt-get install -y \
     git \
     curl \
-    libpng-dev \
     libonig-dev \
-    libxml2-dev \
     zip \
     unzip
 
@@ -14,7 +12,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath
+RUN docker-php-ext-install mbstring pcntl bcmath
 
 # Install Xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug
